Prevent media files from overflowing their containers

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,7 @@
 	border: 0;
 	box-sizing: border-box;
 }
+
+img, embed, video, object {
+	max-width: 100%;
+}
